[FilesRefresh] Fix the flickering issue related to the splitter
For FilesRefresh, we remove the old splitter in the DOM tree and
insert the new splitter, this is because we need to make sure
both splitter work regardless of the flag is on or off. This DOM
structure change cause flickering around the splitter area, this
CL adds some CSS styles to prevent it from happening.

Before: http://go/scrcast/NTM3NzA3MTk4ODYwNDkyOHwwMGQ1ZGVkNi1kMA
After: http://go/scrcast/NjMxNzg2ODY4Njc3MDE3NnxhZThjYzJlNC00MA

Bug: b:277859000
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4416785
Commit-Queue: Wenbo Jie <wenbojie@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1129128}

--- a/ui/file_manager/file_manager/foreground/css/file_manager_gm3.css
+++ b/ui/file_manager/file_manager/foreground/css/file_manager_gm3.css
@@ -308,6 +308,21 @@ html.col-resize #directory-tree .tree-row > .file-row > .root-eject:hover {
 /* Can be removed after new directory replacement. -- END */
 
 /* Splitter. */
+/* Prevent the sudden flickering when opening the Files app. "div.splitter" is
+  the legacy splitter DOM element. We need to maintain the existing DOM
+  structure to make sure it can cater both the legacy splitter style and the
+  refresh23 style. In file_manager_ui.js we will remove the legacy ".splitter"
+  element if the jelly flag is on, this sudden removal will cause a flickering
+  issue due to position change, hence setting a width here for the legacy
+  splitter to prevent that.  */
+div.splitter {
+  width: 24px;
+}
+
+div.splitter .splitter-button {
+  display: none;
+}
+
 .jelly-splitter {
   --xf-splitter-tracker-offset: 16px;
   --xf-splitter-z-index: 500;  /* Must be below the contextmenu (600). */
